tests/machine/x/fs/match_expr.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:47:57Z
open System

let x: int = 2
let label = (match x with
    | 1 -> "one"
    | 2 -> "two"
    | 3 -> "three"
    | _ -> "unknown")
printfn "%A" label
